# MSPM0G3507-CMAKE-GCC-Template

./: .clang-format  .clangd  CMakeLists.txt  Configuration.md  README.md  flash.cfg  probe-rs_supportd.txt  run.bat  run.sh
.cache/clangd/index/: DeviceFamily.h.F7E1101F34667110.idx  board.c.6727E06655CE3072.idx  board.h.8CA0C9F47B6FE2F6.idx  cmsis_compiler.h.5EE0A5E0AD2C01A6.idx  cmsis_gcc.h.B615D279ECD1DE09.idx  cmsis_version.h.44C44C01C1C236EA.idx  core_cm0plus.h.0F25D18BF9FB3972.idx  dl_adc12.c.648C1EFDC56107BD.idx  dl_adc12.h.C2AE91458474229C.idx  dl_aes.c.0250E2C7E87C72C8.idx  dl_aes.h.5A8AC6DD61022B69.idx  dl_aesadv.c.8B39ECBB41E7D4C0.idx  dl_aesadv.h.E3D6DB5E88AF320F.idx  dl_common.c.776752DA22B3E4E4.idx  dl_common.h.7E3E42CDF897AB96.idx  dl_comp.h.29B6B9B2DABA379A.idx  dl_core.h.D90859CE49BC1918.idx  dl_crc.c.9420EA62566C44BA.idx  dl_crc.h.E446C4D868339A84.idx  dl_crcp.c.2FD135A4397FD525.idx  dl_crcp.h.32AEBD63939317B4.idx  dl_dac12.c.AC234FF2AC6A487E.idx  dl_dac12.h.78F32DC30C6165F0.idx  dl_dma.c.E411C6D6BBC7E66E.idx  dl_dma.h.7D3B50125DF9F098.idx  dl_factoryregion.h.9BD0413B9B987DD1.idx  dl_flashctl.c.C5757181958ED1C6.idx  dl_flashctl.h.09B6F83F87F7EA59.idx  dl_gpamp.h.C6805FCD274C1218.idx  dl_gpio.h.BA729B89BC2EBD4B.idx  dl_i2c.c.4960BD9194A26902.idx  dl_i2c.h.D14E51C3D065DC7B.idx  dl_interrupt.c.C3F9EA0B571C7C1A.idx  dl_interrupt.h.28D082BBE1762707.idx  dl_iwdt.h.2A78B6C227EA0FA2.idx  dl_keystorectl.c.18D8AEFFD23A4856.idx  dl_keystorectl.h.B1C114556476929D.idx  dl_lcd.c.67224FBFC37204A2.idx  dl_lcd.h.EB9AAC7B809E0F2B.idx  dl_lfss.c.C62AA0B89D5721A6.idx  (+71 more)
BSP/Inc/: board.h  oled.h  sys.h
BSP/Src/: board.c  sys.c
Core/: empty.syscfg  main.c  ti_msp_dl_config.c  ti_msp_dl_config.h
tools/keil/: MSPM0_SDK_syscfg_menu_import.cfg  syscfg.bat
